[package]
name = "nacvm"
version = "1.0.6"
edition = "2021"
license = "MIT"
description = "The official version manager for the Naclac framework"
repository = "https://github.com/naclacframework/naclac-vm"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
colored = "3.1.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
